theme title update

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1376,7 +1376,7 @@ colorandSizing.forEach((data,index,arr)=>{
     let htmlSegment2 = `
   <div class="row wholesaleoption-title">
     <div class="col-3">
-    <div class="allvarinatname">
+    <div class="allvarinatname-title">
                             <p>
       ${data} </p>
     </div>
@@ -1387,7 +1387,7 @@ colorandSizing.forEach((data,index,arr)=>{
       else if (index === 1 ) {
         let htmlSegment3 = `
     <div class="col-8 d-flex justify-content-around">
-            <div class="allvarinatname">
+            <div class="allvarinatname-content">
                                     <p>
               ${data} </p>
             </div>
@@ -1403,7 +1403,7 @@ colorandSizing.forEach((data,index,arr)=>{
    else if (index === arr.length - 1 ) {
         let htmlSegment3 = `
   
-            <div class="allvarinatname">
+            <div class="allvarinatname-content">
                                     <p>
               ${data} </p>
             </div>
@@ -1422,7 +1422,7 @@ colorandSizing.forEach((data,index,arr)=>{
 
   let htmlSegment4 = `
  
-    <div class="allvarinatname">
+    <div class="allvarinatname-content">
                             <p>
       ${data} </p>
     </div>`;
