--- a/sections/main-productold.liquid
+++ b/sections/main-productold.liquid
@@ -489,14 +489,14 @@
                             type="radio"
                             id="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}"
                             name="{{ option.name }}"
-                            value="{{ value | escape }}"
+                            value="{{ value  | escape }}"
                             form="{{ product_form_id }}"
                             {% if option.selected_value == value %}
                               checked
                             {% endif %}
                           >
                           <label for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}">
-                            {{ value }}
+                            {{ value | split: "___" | first   }}
                           </label>
                         {%- endfor -%}
                       </fieldset>
@@ -1170,17 +1170,17 @@
 
 
 
-{% for variant in product.variants %}
-
-  <p> <span>{{- variant.id -}}</span> {{ variant.inventory_quantity }}</p>
-       
- {% endfor %}
-
 
 
 <div class="container">
   <div class="row">
-  
+    <div class="col-md-12">
+      <div class="d-flex">
+        <div class="allinonarray">
+
+        </div>
+      </div>
+    </div>
   </div>
 
 </div>
@@ -1188,8 +1188,31 @@
   Add to card 
 </div>
 
-<script>
 
+<section >
+  <div class="whole_sell_wrapper">
+    <div class="containr alltitle">
+
+    </div>
+  </div>
+
+
+</section>
+
+<h2>{{ "Cranberry___9F000F" | split: "___" | last }}</h2>
+<script>
+ async function imposeMinMax(e){
+    if(e.value != ""){
+      if(parseInt(e.value) < parseInt(e.min)){
+        e.value = e.min;
+      }
+      if(parseInt(e.value) > parseInt(e.max)){
+        e.value = e.max;
+      }
+    }
+  }
+  
+ 
 {% comment %} get varinat inventroy count  {% endcomment %}
 const allavaiableinventory = [
 {% for variant in product.variants %}
@@ -1286,46 +1309,33 @@ if ( users.product.options[1].name === 'Color'){
 
 
 
-    //  console.log(users.product.options[2].name + " From 2 option ");
+  
 
 
 
     }// last of Inner if for sizing users.product.options[2].name === 'Size'
+
   } //last of Main if function this is only work if users.product.options[1].name === 'Color'
   
-  let container = document.querySelector('.row');
+  let container = document.querySelector('.allinonarray');
   container.innerHTML = html;
 
 
   users.product.variants.forEach((user,index) => {
-    user.occupation = allavaiableinventory[index];
+    user.inventory_product_count = allavaiableinventory[index];
      
-
+  console.log(user.enventorycount);
     getallColorfromproudct.map(singelcolor =>{
-      {% comment %} let userop1 = user.option1.split('').filter(e => e.trim().length).join('_');
-      let userop2 = user.option2.split('').filter(e => e.trim().length).join('_');
-      let userop3 = user.option3.split('').filter(e => e.trim().length).join('_');
-      if(userop1 == singelcolor || userop2 == singelcolor || userop3 == singelcolor  ){
-  {% endcomment %}
+     
+      
   let option1s = user.option1;
    let option1 = option1s.split('').filter(e => e.trim().length).join('');
   let option2s = user.option2;
    let option2 = option2s.split('').filter(e => e.trim().length).join('');
  //let option3s = user.option3;
  //  let option3 = option3s.split('').filter(e => e.trim().length).join('_');
- {% comment %} console.log(option2);
- console.log("this is opiton one");
- console.log(singelcolor); {% endcomment %}
-{% comment %} 
-if(singelcolor == "LightBlue"){
-  console.log("This is LightBlue working");
-} // endof lightblue {% endcomment %}
 
         if(option1 == singelcolor || option2 == singelcolor   ){
-           {% comment %} let singelcolorName = singelcolor.split(' ').filter(e => e.trim().length).join('_') {% endcomment %}
-          // console.log(singelcolorName);
-          {% comment %} console.log(singelcolor +" inner"); {% endcomment %}
-         // console.log("This is inner LightBlue");
            eval(singelcolor).push(user); 
           
         } else{
@@ -1335,10 +1345,183 @@ if(singelcolor == "LightBlue"){
 
     });
   });
+  
+  {% for value in product.options_by_name.color.values %}
+    {{ value | split: " " | join:"" }}.unshift( '{{ value | split: "___" | first  }}'  );
+    {% endfor %} 
+
+
   {% for value in product.options_by_name.color.values %}
     console.log({{ value | split: " " | join:"" }} );
     {% endfor %} 
     
+
+   // color and sizing name array 
+
+   const colorandSizing = [
+      "Color",
+
+    {% for value in product.options_by_name.size.values %}
+    {% if forloop.index == last %} "{{ value }} " {% else %} "{{ value}}", {% endif %}
+    {% endfor %}
+   ];
+  // console.log(colorandSizing);
+
+  //now seperate array start
+let htmla =''
+colorandSizing.forEach((data,index,arr)=>{
+
+  if(index === 0){
+  
+    let htmlSegment2 = `
+  <div class="row wholesaleoption-title">
+    <div class="col-3">
+    <div class="allvarinatname-title">
+                            <p>
+      ${data} </p>
+    </div>
+  </div>
+    `;
+    htmla += htmlSegment2;
+      }
+      else if (index === 1 ) {
+        let htmlSegment3 = `
+    <div class="col-8 d-flex justify-content-around">
+            <div class="allvarinatname-content">
+                                    <p>
+              ${data} </p>
+            </div>
+           
+      
+            `;
+            htmla += htmlSegment3;
+  
+          
+        }
+      
+      
+   else if (index === arr.length - 1 ) {
+        let htmlSegment3 = `
+  
+            <div class="allvarinatname-content">
+                                    <p>
+              ${data} </p>
+            </div>
+          </div>
+            <div class="col-1">
+              
+            </div>
+          </div> 
+            `;
+            htmla += htmlSegment3;
+  
+          
+        } 
+      
+      else{
+
+  let htmlSegment4 = `
+ 
+    <div class="allvarinatname-content">
+                            <p>
+      ${data} </p>
+    </div>`;
+    htmla += htmlSegment4;
+}
+
+
+  // console.log("this is running Varinat");
+  
+  }) // coloradnsizing end
+
+
+{% for value in product.options_by_name.color.values %}
+  {{ value | split: " " | join:"" }}.forEach((data,index,arr)=>{
+
+    
+   if(index === 0){
+    console.log(data);
+ htmlSegment = `
+    <div class="row topwrapper d-flex align-items-center">
+    <div class="allvarinatcolorname  col-3">
+
+      <p> Cost Per Unit: </p>
+
+        <div class="d-flex align-items-center colorname">
+          <div style="background: #{{ value | split: "___" | last  }};
+            width: 45px;
+            height: 45px;
+            border:1px solid #fffff7;
+            border-radius: 50%;">
+          </div>
+        <p>${data} </p>
+        </div >
+
+      <p> Stock Level: </p>
+     
+    </div>`;
+    htmla += htmlSegment;
+  } 
+  else if( index === 1 ){
+    htmlSegment = `<div class="col-8 d-flex justify-content-around">    
+    <div class="singel-varniat-input">        
+          <p>$${data.price}</p>
+          <div>
+            <input type="number" min="0" max="${data.inventory_product_count}" data-varnitid="${data.id}" onchange="myFunction(this)" placeholder="${data.option1}" onkeyup="imposeMinMax(this)">  
+          </div>
+          <p>${data.inventory_product_count   } </p>
+        </div>`;
+    htmla += htmlSegment; 
+  }
+  
+  
+  
+  
+  else if( index === arr.length-1 ){
+    htmlSegment = `<div class="singel-varniat-input">         
+    <p>$${data.price.replace(/\s+/g,'')}</p>
+    <div>
+      <input type="number" min="0" max="${data.inventory_product_count}" data-varnitid="${data.id}" onchange="myFunction(this)" placeholder="${data.option1}" onkeyup="imposeMinMax(this)">  
+    </div>
+    <p>${data.inventory_product_count} </p>
+  </div>
+
+   </div> <!--end of element bootstrap inner div-->
+  
+
+
+   <div class="col-1">
+    <div class="color-add-color" onclick="addItem()">
+      Add
+    </div>
+  </div>
+
+</div>
+  
+  `;
+    htmla += htmlSegment; 
+  }
+  
+  else{
+    htmlSegment = `<div class="singel-varniat-input">         
+          <p>$${data.price.replace(/\s+/g,'')}</p>
+          <div>
+            <input type="number" min="0" max="${data.inventory_product_count}" data-varnitid="${data.id}" onchange="myFunction(this)" placeholder="${data.option1}" onkeyup="imposeMinMax(this)">  
+          </div>
+          <p>${data.inventory_product_count} </p>
+        </div>`;
+    htmla += htmlSegment; 
+  }
+    // console.log("this is running Varinat");
+    
+  });
+  {% endfor %} 
+
+
+
+let container2 = document.querySelector('.alltitle');
+container2.innerHTML = htmla;
+
 
 
 } //last of main function
@@ -1348,20 +1531,20 @@ if(singelcolor == "LightBlue"){
 renderUsers();
 const itemraw = [];
 async function myFunction(e){
-
   let newobect = {};
    //console.log(e)
- console.log("this is working");
+  // console.log("this is working");
  // newobect.[";id"] = e.getAttribute('data-varnitid');
  // newobect.["quantity"] = e.value;
  newobect['id'] = e.getAttribute('data-varnitid');
  newobect['quantity'] = e.value;
  itemraw.push(newobect);
+
    
 } 
 
 async function addItem() {
-
+  
  async function addItem1(itemraw) {
   console.log(itemraw);
   const result = await fetch("/cart/add.js", {
@@ -1379,8 +1562,11 @@ async function addItem() {
 }
 
 const additemcount = addItem1(itemraw);
+location.replace(`/cart`);
+}///async addItem end
 
-}
+
+
 
 
 
@@ -2164,20 +2350,23 @@ const additemcount = addItem1(itemraw);
 
 
 <style>
+
+  .allvarinatname{
+  display:inline-block;
+  }
   p {
-    margin-left:50px;
+   
     color:#fff;
   }
 p span{
   color:red;
 }
-.container{
- display: flex;
- width: 600px;
+.allinonarray{
+ width:600px;
 }
 
 .user{
- width:20%;
+ display: inline-block;
 }
 .add-card {
   color: red;
@@ -2185,3 +2374,4 @@ p span{
   font-size: 34px;
 }
 </style>
+
