--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -53,15 +53,7 @@
             <div class="media media--transparent media--hover-effect">
               {% comment %}theme-check-disable ImgLazyLoading{% endcomment %}
               <img
-                srcset="
-                  {%- if card_product.featured_media.width >= 165 -%}{{ card_product.featured_media | image_url: width: 165 }} 165w,{%- endif -%}
-                  {%- if card_product.featured_media.width >= 360 -%}{{ card_product.featured_media | image_url: width: 360 }} 360w,{%- endif -%}
-                  {%- if card_product.featured_media.width >= 533 -%}{{ card_product.featured_media | image_url: width: 533 }} 533w,{%- endif -%}
-                  {%- if card_product.featured_media.width >= 720 -%}{{ card_product.featured_media | image_url: width: 720 }} 720w,{%- endif -%}
-                  {%- if card_product.featured_media.width >= 940 -%}{{ card_product.featured_media | image_url: width: 940 }} 940w,{%- endif -%}
-                  {%- if card_product.featured_media.width >= 1066 -%}{{ card_product.featured_media | image_url: width: 1066 }} 1066w,{%- endif -%}
-                  {{ card_product.featured_media | image_url }} {{ card_product.featured_media.width }}w
-                "
+      
                 src="{{ card_product.featured_media | image_url: width: 533 }}"
                 sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 130 | divided_by: 4 }}px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)"
                 alt="{{ card_product.featured_media.alt | escape }}"
@@ -71,6 +63,9 @@
                 {% endunless %}
                 width="{{ card_product.featured_media.width }}"
                 height="{{ card_product.featured_media.height }}"
+
+
+                id="{{card_product.title | split: "_" | first}}"
               >
               {% comment %}theme-check-enable ImgLazyLoading{% endcomment %}
 
@@ -161,15 +156,11 @@
             </h3>
            <p> {{ card_product.price | money }}</p>
           </div>
-          <div class="card-proudctimage ">
-            {% for value in card_product.options_by_name.color.values %}
-              <div class="s-card-color" style="background:#{{ value | split: "___" | last }}">
-              
-              </div>
-           
-              {% endfor %} 
-          </div>
+
           <div class="card-information">
+      
+
+
             {%- if show_vendor -%}
               <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
               <div class="caption-with-letter-spacing light">{{ card_product.vendor }}</div>
@@ -380,11 +371,84 @@
       </div>
     </div>
   </div>
-{%- endif -%}
+{%- endif -%}     
+
+
+<div class="card-proudctimage ">
+  {% for value in card_product.options_by_name.color.values %}
+    <div class="s-card-color" data-color="{{ value }}" style="background:#{{ value | split: "___" | last }}"
+    onclick="renderUsersa(this)"
+    >
+    
+    </div>
+ 
+    {% endfor %} 
+</div>
 
 
 
+<script>
 
-{% comment %} {% for value in card_product.options_by_name.color.values %}
-  <h1>{{value}}</h1>
-  {% endfor %}  {% endcomment %}
+  const getallcolor = [
+
+    {% for value in card_product.options_by_name.color.values %}
+      {% if forloop.index == last %} "{{ value }} " {% else %} "{{ value }}", {% endif %}
+    {% endfor %} 
+  ]
+  async function getUsers() {
+    let url = `{{ card_product.url }}.json`;
+    try {
+        let res = await fetch(url);
+        return await res.json();
+    } catch (error) {
+        console.log(error);
+    }
+  }
+  async function renderUsersa(e) {
+    let users = await getUsers();
+    
+   
+
+
+    if ( users.product.options[0].name != null && users.product.options[0].name === 'Color'){
+      users.product.variants.forEach((user,index) => {
+      
+        console.log(users.product.options[0].name);
+      });
+
+    } else if(users.product.options[1].name != null && users.product.options[1].name === 'Color'){
+      users.product.variants.forEach((user,index) => {
+   // 
+          if(user.image_id != null   &&  e.dataset.color ===  user.option2 ){
+       
+            
+            
+
+
+             users.product.images.forEach((img)=>{
+              let myElement = document.getElementById("{{card_product.title | split: "_" | first}}");
+                  
+         
+               if(img.id === user.image_id ){
+
+          console.log(img.src);
+                myElement.src= img.src
+              }
+            }) 
+          
+          } else{
+          console.log("this is no image")
+          }
+   
+      
+      });
+    
+    } else if(users.product.options[2].name != null && users.product.options[2].name === 'Color'){
+      users.product.variants.forEach((user,index) => {
+    console.log(users.product.options[2].name);
+       
+      
+      });
+    }
+  }
+</script>
