--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -102,23 +102,76 @@
               grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
               grid--{{ section.settings.columns_desktop }}-col-desktop">
               {%- for product in collection.products -%}
-                {% assign lazy_load = false %}
-                {%- if forloop.index > 2 -%}
-                  {%- assign lazy_load = true -%}
-                {%- endif -%}
-                <li class="grid__item">
-                  {% render 'card-product',
-                    card_product: product,
-                    media_aspect_ratio: section.settings.image_ratio,
-                    show_secondary_image: section.settings.show_secondary_image,
-                    show_vendor: section.settings.show_vendor,
-                    show_rating: section.settings.show_rating,
-                    lazy_load: lazy_load,
-                    show_quick_add: section.settings.enable_quick_add,
-                    section_id: section.id
 
-                  %}
-                </li>
+                        {% if  customer and customer.tags contains 'wholesale'  %}
+                                  
+                {% elsif customer and customer.tags contains 'normal' %}
+
+                                {% if product.tags contains 'wholesale' %}
+                                        
+                                   
+                                  {% assign lazy_load = false %}
+                                  {%- if forloop.index > 2 -%}
+                                    {%- assign lazy_load = true -%}
+                                  {%- endif -%}
+                                        <li class="grid__item">
+                                          {% render 'card-product',
+                                            card_product: product,
+                                            media_aspect_ratio: section.settings.image_ratio,
+                                            show_secondary_image: section.settings.show_secondary_image,
+                                            show_vendor: section.settings.show_vendor,
+                                            show_rating: section.settings.show_rating,
+                                            lazy_load: lazy_load,
+                                            show_quick_add: section.settings.enable_quick_add,
+                                            section_id: section.id
+                  
+                                          %}
+                                        </li>
+
+
+
+                                  {% else %}
+              
+                        
+                                  {% endif %} 
+
+
+
+                        {% else %}
+                        {% unless customer.tags contains 'wholesale' %}
+                            
+
+                                {% if product.tags contains 'wholesale' %}
+
+                                  {% else %}
+              
+                                  {% assign lazy_load = false %}
+                                  {%- if forloop.index > 2 -%}
+                                    {%- assign lazy_load = true -%}
+                                  {%- endif -%}
+                                        <li class="grid__item">
+                                          {% render 'card-product',
+                                            card_product: product,
+                                            media_aspect_ratio: section.settings.image_ratio,
+                                            show_secondary_image: section.settings.show_secondary_image,
+                                            show_vendor: section.settings.show_vendor,
+                                            show_rating: section.settings.show_rating,
+                                            lazy_load: lazy_load,
+                                            show_quick_add: section.settings.enable_quick_add,
+                                            section_id: section.id
+                  
+                                          %}
+                                        </li>
+                                  {% endif %}
+               
+                          {% endunless %}
+                    {% endif %}
+
+
+              
+
+       
+
               {%- endfor -%}
             </ul>
     
