--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -96,12 +96,12 @@
                           {{ 'products.product.price.sale_price' | t }}
                         </span>
                         <strong class="cart-item__final-price product-option">
-                          <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-item-final-price>{{ item.final_price | money }}</span>
+                          {{ item.final_price | money }}
                         </strong>
                       </div>
                     {%- else -%}
                       <div class="product-option">
-                        <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-item-original-price>{{ item.original_price | money }}</span>
+                        {{ item.original_price | money }}
                       </div>
                     {%- endif -%}
 
@@ -164,19 +164,19 @@
                           </dt>
                           <dd>
                             <s class="cart-item__old-price price price--end">
-                              <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-original-line-price>{{ item.original_line_price | money }}</span>
+                              {{ item.original_line_price | money }}
                             </s>
                           </dd>
                           <dt class="visually-hidden">
                             {{ 'products.product.price.sale_price' | t }}
                           </dt>
                           <dd class="price price--end">
-                            <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-final-line-price>{{ item.final_line_price | money }}</span>
+                            {{ item.final_line_price | money }}
                           </dd>
                         </dl>
                       {%- else -%}
                         <span class="price price--end">
-                          <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-original-line-price>{{ item.original_line_price | money }}</span>
+                          {{ item.original_line_price | money }}
                         </span>
                       {%- endif -%}
 
@@ -254,19 +254,19 @@
                           </dt>
                           <dd>
                             <s class="cart-item__old-price price price--end">
-                              <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-original-line-price>{{ item.original_line_price | money }}</span>
+                              {{ item.original_line_price | money }}
                             </s>
                           </dd>
                           <dt class="visually-hidden">
                             {{ 'products.product.price.sale_price' | t }}
                           </dt>
                           <dd class="price price--end">
-                            <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-final-line-price>{{ item.final_line_price | money }}</span>
+                            {{ item.final_line_price | money }}
                           </dd>
                         </dl>
                       {%- else -%}
                         <span class="price price--end">
-                          <span bss-b2b-cart-item-key="{{ item.key }}" bss-b2b-original-line-price>{{ item.original_line_price | money }}</span>
+                          {{ item.original_line_price | money }}
                         </span>
                       {%- endif -%}
 
@@ -294,7 +294,7 @@
 
     <p class="visually-hidden" id="cart-live-region-text" aria-live="polite" role="status"></p>
     <p class="visually-hidden" id="shopping-cart-line-item-status" aria-live="polite" aria-hidden="true" role="status">{{ 'accessibility.loading' | t }}</p>
-  {% if content_for_header contains 'bss-b2b' %}{% render "bss-b2b-discount-code-form" %}{% endif %}</form>
+  </form>
 </cart-items>
 
 {% schema %}
